crates/wgso/tests/cases_invalid/directive_parsing/.expected
error: expected `compute` or `render`
 --> ./tests/cases_invalid/directive_parsing/main.wgsl:1:6
  |
1 | #mod<invalid> test
  |      ^
  |
error: unexpected tokens
 --> ./tests/cases_invalid/directive_parsing/main.wgsl:2:20
  |
2 | #mod<compute> test invalid
  |                    ^^^^^^^
  |